kafka-on-gke/controlcenter-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: controlcenter
          servicePort: 9021
      - path: /kafka
        backend:
          serviceName: kafka
          servicePort: 9071
